--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^19.0.0",
-    "@angular/cdk": "^19.2.19",
     "@angular/common": "^19.0.0",
     "@angular/compiler": "^19.0.0",
     "@angular/core": "^19.0.0",
@@ -24,11 +23,15 @@
     "@angular/router": "^19.0.0",
     "@angular/ssr": "^19.0.6",
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "@primeng/themes": "^19.1.3",
     "@tailwindcss/postcss": "^4.1.11",
     "express": "^4.18.2",
     "flowbite": "^3.1.2",
+    "ng-otp-input": "^2.0.8",
+    "ngx-otp-input": "^1.1.4",
     "ngx-toastr": "^19.0.0",
     "postcss": "^8.5.6",
+    "primeicons": "^7.0.0",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.1.11",
     "tslib": "^2.3.0",
