--- a/package.json
+++ b/package.json
@@ -27,12 +27,17 @@
     "@tailwindcss/postcss": "^4.1.11",
     "express": "^4.18.2",
     "flowbite": "^3.1.2",
+    "jquery": "^3.7.1",
     "ng-otp-input": "^2.0.8",
     "ngx-otp-input": "^1.1.4",
+    "ngx-slick-carousel": "^19.0.0",
     "ngx-toastr": "^19.0.0",
     "postcss": "^8.5.6",
     "primeicons": "^7.0.0",
+    "primeng": "^19.1.3",
     "rxjs": "~7.8.0",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^11.2.10",
     "tailwindcss": "^4.1.11",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
